force-app/main/default/objects/S_P_Vendors__c/fields/Number_of_Desktops_in_Organization__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Desktops_in_Organization__c</fullName>
    <label>Number of Desktops in Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-100</fullName>
            </value>
            <value>
                <fullName>101-500</fullName>
            </value>
            <value>
                <fullName>501-1000</fullName>
            </value>
            <value>
                <fullName>1001-2500</fullName>
            </value>
            <value>
                <fullName>2501-5000</fullName>
            </value>
            <value>
                <fullName>5001+</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>