force-app/main/default/objects/S_P_Vendors__c/fields/Number_of_Employees_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_Students__c</fullName>
    <label>Number of Employees/Students</label>
    <length>100</length>
    <type>Text</type>
</CustomField>