force-app/main/default/objects/S_P_Vendors__c/fields/Number_of_On_site_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_On_site_Meetings__c</fullName>
    <inlineHelpText>Number of On-site Meetings pertaining to this project:</inlineHelpText>
    <label>Number of On-site Meetings</label>
    <length>100</length>
    <type>Text</type>
</CustomField>