force-app/main/default/objects/S_P_Vendors__c/fields/Number_of_Phone_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Phone_Meetings__c</fullName>
    <inlineHelpText>Number of Phone Meetings pertaining to this project:</inlineHelpText>
    <label>Number of Phone Meetings</label>
    <length>100</length>
    <type>Text</type>
</CustomField>