force-app/main/default/objects/S_P_Vendors__c/fields/Number_of_Servers_in_Organization__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Servers_in_Organization__c</fullName>
    <label>Number of Servers in Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-500</fullName>
            </value>
            <value>
                <fullName>501-1000</fullName>
            </value>
            <value>
                <fullName>1001+</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>