force-app/main/default/objects/S_P_Vendors__c/fields/Number_of_Sockets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sockets__c</fullName>
    <label>Number of Sockets</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>