force-app/main/default/objects/S_P_Vendors__c/fields/Nvidia_Applications_Customer_Utilizing__c.field-meta.xml
<CustomField>
    <fullName>Nvidia_Applications_Customer_Utilizing__c</fullName>
    <label>Nvidia Applications Customer Utilizing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>