force-app/main/default/objects/S_P_Vendors__c/fields/of_ESX_Hosts__c.field-meta.xml
<CustomField>
    <fullName>of_ESX_Hosts__c</fullName>
    <label># of ESX Hosts</label>
    <length>100</length>
    <type>Text</type>
</CustomField>