force-app/main/default/objects/S_P_Vendors__c/fields/of_Non_Virtualized_Servers__c.field-meta.xml
<CustomField>
    <fullName>of_Non_Virtualized_Servers__c</fullName>
    <label># of Non-Virtualized Servers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>