force-app/main/default/objects/S_P_Vendors__c/fields/of_VMs__c.field-meta.xml
<CustomField>
    <fullName>of_VMs__c</fullName>
    <label># of VMs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>