force-app/main/default/objects/S_P_Vendors__c/fields/Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Description__c</fullName>
    <inlineHelpText>Briefly describe the details of the opportunity (for example: what is the environment? What is the application? Is it competitive?)</inlineHelpText>
    <label>Opportunity Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>