force-app/main/default/objects/S_P_Vendors__c/fields/Opportunity_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Registration_Date__c</fullName>
    <label>Opportunity Registration Date</label>
    <type>Date</type>
</CustomField>