force-app/main/default/objects/S_P_Vendors__c/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Partner Led Activity (non-MDF)</fullName>
            </value>
            <value>
                <fullName>Prospecting Activity</fullName>
            </value>
            <value>
                <fullName>Renewal Cross-Sell/Up-Sell</fullName>
            </value>
            <value>
                <fullName>VMware Generated Lead</fullName>
            </value>
            <value>
                <fullName>VMware Partner Demand Center/Email Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>