force-app/main/default/objects/S_P_Vendors__c/fields/Opps_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Opps_Quantity__c</fullName>
    <formula>Opportunity__r.TotalQtySNPDropbox__c</formula>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>