force-app/main/default/objects/S_P_Vendors__c/fields/Other_McAfee_product__c.field-meta.xml
<CustomField>
    <fullName>Other_McAfee_product__c</fullName>
    <description>When the Other Product Not Listed value is chosen in the McAfee Product field, regardless of Product Category chosen,  the user should be presented with this text box field where they are required to fill in the “other” value</description>
    <inlineHelpText>Enter Other McAfee Product Name or MFG PN#</inlineHelpText>
    <label>Other McAfee product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>