force-app/main/default/objects/S_P_Vendors__c/fields/Other_Partner_Involved_Distr_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Other_Partner_Involved_Distr_Reseller__c</fullName>
    <label>Other Partner Involved (Distr./Reseller)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>