force-app/main/default/objects/S_P_Vendors__c/fields/Other_Products__c.field-meta.xml
<CustomField>
    <fullName>Other_Products__c</fullName>
    <description>When the sales user selects “Autodesk – other product” for Field: What Product, the new field: Other Products will become mandatory for sales to complete.</description>
    <inlineHelpText>Please specify exact product</inlineHelpText>
    <label>Other Products</label>
    <length>100</length>
    <type>Text</type>
</CustomField>