force-app/main/default/objects/S_P_Vendors__c/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner ID</label>
    <referenceTo>S_P_Vendor_Partner_Information__c</referenceTo>
    <relationshipLabel>S&amp;P Vendors</relationshipLabel>
    <relationshipName>S_P_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>