force-app/main/default/objects/S_P_Vendors__c/fields/PDU_KVM_Mfg_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>PDU_KVM_Mfg_Part_Number__c</fullName>
    <label>PDU/KVM Mfg Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>