force-app/main/default/objects/S_P_Vendors__c/fields/Please_list_the_Partner_Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Please_list_the_Partner_Distributor_Name__c</fullName>
    <label>Please list the Partner/Distributor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>