force-app/main/default/objects/S_P_Vendors__c/fields/Please_specify_exact_Product__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_exact_Product__c</fullName>
    <label>Please specify exact Product:</label>
    <length>100</length>
    <type>Text</type>
</CustomField>