force-app/main/default/objects/S_P_Vendors__c/fields/PM1__c.field-meta.xml
<CustomField>
    <fullName>PM1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>S_P_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>