force-app/main/default/objects/S_P_Vendors__c/fields/PM2__c.field-meta.xml
<CustomField>
    <fullName>PM2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>S_P_Vendors1</relationshipName>
    <type>Lookup</type>
</CustomField>