force-app/main/default/objects/S_P_Vendors__c/fields/PM4__c.field-meta.xml
<CustomField>
    <fullName>PM4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>S_P_Vendors3</relationshipName>
    <type>Lookup</type>
</CustomField>