force-app/main/default/objects/S_P_Vendors__c/fields/POC_ORAN__c.field-meta.xml
<CustomField>
    <fullName>POC_ORAN__c</fullName>
    <description>Story 3382307:VMware Next Gen CR-00140444: POC ORAN</description>
    <label>POC ORAN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>