force-app/main/default/objects/S_P_Vendors__c/fields/Price_point_needed_to_win__c.field-meta.xml
<CustomField>
    <fullName>Price_point_needed_to_win__c</fullName>
    <label>Price point needed to win</label>
    <length>100</length>
    <type>Text</type>
</CustomField>