force-app/main/default/objects/S_P_Vendors__c/fields/Product_Add_Success_Msg__c.field-meta.xml
<CustomField>
    <fullName>Product_Add_Success_Msg__c</fullName>
    <description>Created for Boomi to update Success Message from VMware as part Story 3382308:VMware Next Gen CR-00140306: Product Additions</description>
    <label>Product Add Success Msg</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>