force-app/main/default/objects/S_P_Vendors__c/fields/Product_Addition__c.field-meta.xml
<CustomField>
    <fullName>Product_Addition__c</fullName>
    <formula>IF(Opportunity__r.New_Product_Added__c || Opportunity__r.Pending_OLI_Updates__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Addition</label>
    <type>Checkbox</type>
</CustomField>