force-app/main/default/objects/S_P_Vendors__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Content Security</fullName>
            </value>
            <value>
                <fullName>Data Protection</fullName>
            </value>
            <value>
                <fullName>Data Server Security</fullName>
            </value>
            <value>
                <fullName>Endpoint Protection</fullName>
            </value>
            <value>
                <fullName>Endpoint Security</fullName>
            </value>
            <value>
                <fullName>IPS</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Network Security</fullName>
            </value>
            <value>
                <fullName>Next Generation Firewall</fullName>
            </value>
            <value>
                <fullName>Security &amp; Risk Management</fullName>
            </value>
            <value>
                <fullName>Server Security</fullName>
            </value>
            <value>
                <fullName>SIEM</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>