force-app/main/default/objects/S_P_Vendors__c/fields/Product_Line_Desc__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Desc__c</fullName>
    <label>Product Line Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>