force-app/main/default/objects/S_P_Vendors__c/fields/Product_Needed_By_MM_DD_YY__c.field-meta.xml
<CustomField>
    <fullName>Product_Needed_By_MM_DD_YY__c</fullName>
    <label>Product Needed By (MM/DD/YY)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>