force-app/main/default/objects/S_P_Vendors__c/fields/Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>Product_Selection__c</fullName>
    <label>Product Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extended Support</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>JBOSS</fullName>
            </value>
            <value>
                <fullName>Red Hat Cluster</fullName>
            </value>
            <value>
                <fullName>RHEL Desktop</fullName>
            </value>
            <value>
                <fullName>RHEL Server</fullName>
            </value>
            <value>
                <fullName>RHEL WKstation</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
            <value>
                <fullName>RHEV Desktop</fullName>
            </value>
            <value>
                <fullName>RHEV Servers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>