force-app/main/default/objects/S_P_Vendors__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Software Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>