force-app/main/default/objects/S_P_Vendors__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>advantage+</fullName>
                <default>true</default>
                <label>advantage+</label>
            </value>
            <value>
                <fullName>ELA</fullName>
            </value>
            <value>
                <fullName>EPP Post-Sale Burn-Down</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>