force-app/main/default/objects/S_P_Vendors__c/fields/Project_Budget_Approved__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget_Approved__c</fullName>
    <label>Project Budget Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>