force-app/main/default/objects/S_P_Vendors__c/fields/Project_Focus__c.field-meta.xml
<CustomField>
    <fullName>Project_Focus__c</fullName>
    <label>Project Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Desktop &amp; Server</fullName>
            </value>
            <value>
                <fullName>Business Continuity</fullName>
            </value>
            <value>
                <fullName>Desktop Management</fullName>
            </value>
            <value>
                <fullName>Server Consolidation</fullName>
            </value>
            <value>
                <fullName>Software Lifecycle Management</fullName>
            </value>
            <value>
                <fullName>Public Cloud</fullName>
            </value>
            <value>
                <fullName>Private Cloud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>