force-app/main/default/objects/S_P_Vendors__c/fields/Provide_URL_Open_RFP_Invitation_to_Bid__c.field-meta.xml
<CustomField>
    <fullName>Provide_URL_Open_RFP_Invitation_to_Bid__c</fullName>
    <label>Provide URL Open RFP/Invitation to Bid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>