force-app/main/default/objects/S_P_Vendors__c/fields/Public_Open_RFP_or_Invitation_to_Bid__c.field-meta.xml
<CustomField>
    <fullName>Public_Open_RFP_or_Invitation_to_Bid__c</fullName>
    <label>Public Open RFP or Invitation to Bid?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>