force-app/main/default/objects/S_P_Vendors__c/fields/Qualified_for_S_P_Deal_Reg_Program__c.field-meta.xml
<CustomField>
    <fullName>Qualified_for_S_P_Deal_Reg_Program__c</fullName>
    <label>Qualified for S&amp;P Deal Reg Program?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>