force-app/main/default/objects/S_P_Vendors__c/fields/Qualified_Product_Line_Desc__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Product_Line_Desc__c</fullName>
    <label>Qualified Product Line Desc</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>