force-app/main/default/objects/S_P_Vendors__c/fields/Ready_to_submit_to_vendor__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_submit_to_vendor__c</fullName>
    <label>Ready to submit to vendor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>