force-app/main/default/objects/S_P_Vendors__c/fields/Red_Hat_entitlement_login__c.field-meta.xml
<CustomField>
    <fullName>Red_Hat_entitlement_login__c</fullName>
    <inlineHelpText>Please engage your customer for this information as it is needed to keep their subscriptions in order.</inlineHelpText>
    <label>Red Hat entitlement login</label>
    <length>100</length>
    <type>Text</type>
</CustomField>