force-app/main/default/objects/S_P_Vendors__c/fields/Referral_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Referral_Opportunity__c</fullName>
    <label>Referral Opportunity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>