force-app/main/default/objects/S_P_Vendors__c/fields/Registration_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Registration_Opportunity_Stage__c</fullName>
    <description>Created as part of Story 3457563:VMware API – Registration Extensions (field changes)</description>
    <label>Registration Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - Prospect</fullName>
                <default>true</default>
                <label>01 - Prospect</label>
            </value>
            <value>
                <fullName>02 - Qualified</fullName>
            </value>
            <value>
                <fullName>03 - Validate</fullName>
            </value>
            <value>
                <fullName>04 - Design</fullName>
            </value>
            <value>
                <fullName>05 - Prove</fullName>
            </value>
            <value>
                <fullName>06 - Negotiate</fullName>
            </value>
            <value>
                <fullName>09 - Closed Lost</fullName>
            </value>
            <value>
                <fullName>07 - Agreement to Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>