force-app/main/default/objects/S_P_Vendors__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>