force-app/main/default/objects/S_P_Vendors__c/fields/Replace_existing_competitor_s_product__c.field-meta.xml
<CustomField>
    <fullName>Replace_existing_competitor_s_product__c</fullName>
    <inlineHelpText>Will the product replace an existing competitor&apos;s Web Filtering/Security product?</inlineHelpText>
    <label>Replace existing competitor&apos;s product?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>