force-app/main/default/objects/S_P_Vendors__c/fields/Request_POC_ORAN__c.field-meta.xml
<CustomField>
    <fullName>Request_POC_ORAN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Story 3382307:VMware Next Gen CR-00140444: POC ORAN</description>
    <inlineHelpText>Check if additional orders will be placed against opportunity more than 30 days following initial order</inlineHelpText>
    <label>Request POC ORAN</label>
    <type>Checkbox</type>
</CustomField>