force-app/main/default/objects/S_P_Vendors__c/fields/Require_Raritan_Legrand_Resources__c.field-meta.xml
<CustomField>
    <fullName>Require_Raritan_Legrand_Resources__c</fullName>
    <label>Require Raritan/Legrand Resources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>