force-app/main/default/objects/S_P_Vendors__c/fields/Reseller_Salesperson_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Salesperson_Contact_Name__c</fullName>
    <label>Reseller Salesperson Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>