force-app/main/default/objects/S_P_Vendors__c/fields/Response_from_Vendor_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_from_Vendor_Date__c</fullName>
    <label>Response from Vendor Date</label>
    <type>DateTime</type>
</CustomField>