force-app/main/default/objects/S_P_Vendors__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Net New</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
            <value>
                <fullName>TUP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>