force-app/main/default/objects/S_P_Vendors__c/fields/S_P_Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>S_P_Deal_Status__c</fullName>
    <label>S&amp;P Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved Pending Benefits</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Incomplete No Response from Sales</fullName>
            </value>
            <value>
                <fullName>Limited Approval</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Returned for more info</fullName>
            </value>
            <value>
                <fullName>Sent to Vendor</fullName>
            </value>
            <value>
                <fullName>Unsuccessful Sent to Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>