force-app/main/default/objects/S_P_Vendors__c/fields/S_P_Vendors_Name__c.field-meta.xml
<CustomField>
    <fullName>S_P_Vendors_Name__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>S&amp;P Vendors Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>