force-app/main/default/objects/S_P_Vendors__c/fields/S_P_Vendors_Name_Hidden__c.field-meta.xml
<CustomField>
    <fullName>S_P_Vendors_Name_Hidden__c</fullName>
    <label>S&amp;P Vendors Name_Hidden</label>
    <length>80</length>
    <type>Text</type>
</CustomField>