force-app/main/default/objects/S_P_Vendors__c/fields/Sales_Activities_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Activities_to_Date__c</fullName>
    <inlineHelpText>Describe the details and overview of this deal</inlineHelpText>
    <label>Sales Activities to Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Had customer meeting and have sent customer quote.</fullName>
            </value>
            <value>
                <fullName>Have had customer meeting, sent quote and have scheduled follow up call.</fullName>
            </value>
            <value>
                <fullName>Multiple meetings with customer and sent quote.</fullName>
            </value>
            <value>
                <fullName>Other (Rep to fill in own comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>