force-app/main/default/objects/S_P_Vendors__c/fields/Sales_Rep_Location__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Location__c</fullName>
    <formula>Opportunity__r.Owner.HR_Location_Country_Desc__c</formula>
    <label>Sales Rep Location</label>
    <type>Text</type>
</CustomField>