force-app/main/default/objects/S_P_Vendors__c/fields/Sales_Rep_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Manager_Email__c</fullName>
    <description>Maj 16.07 - CR11436
Retrieve Sales Manager Email</description>
    <formula>Opportunity__r.Owner.HR_Manager_Email__c</formula>
    <label>Sales Rep Manager&apos;s Email</label>
    <type>Text</type>
</CustomField>