force-app/main/default/objects/S_P_Vendors__c/fields/Sales_Rep_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Phone_No__c</fullName>
    <formula>Opportunity__r.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep&apos;s Phone</label>
    <type>Text</type>
</CustomField>