force-app/main/default/objects/S_P_Vendors__c/fields/Sales_Rep_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_s_Phone__c</fullName>
    <label>Sales Rep&apos;s Phone</label>
    <type>Phone</type>
</CustomField>