force-app/main/default/objects/S_P_Vendors__c/fields/Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name__c</fullName>
    <formula>Opportunity__r.Account.Sales_Channel__r.Segment_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Name</label>
    <type>Text</type>
</CustomField>