force-app/main/default/objects/S_P_Vendors__c/fields/Sent_to_Vendor_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Vendor_Date__c</fullName>
    <label>Sent to Vendor Date</label>
    <type>DateTime</type>
</CustomField>