force-app/main/default/objects/S_P_Vendors__c/fields/Server_Vendor_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Server_Vendor_Competitor__c</fullName>
    <description>The field is ONLY used for Nutanix record type.</description>
    <label>Server Vendor Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cisco UCS</fullName>
            </value>
            <value>
                <fullName>Dell Inc</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>IBM / Lenovo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>