force-app/main/default/objects/S_P_Vendors__c/fields/Shared_Storage_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Shared_Storage_Vendor__c</fullName>
    <label>Shared Storage Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Does_the_Customer_have_Shared_Storage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Dell EqualLogic</fullName>
            </value>
            <value>
                <fullName>EMC</fullName>
            </value>
            <value>
                <fullName>HP StorageWorks</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>LeftHand Networks</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>Other / Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>