force-app/main/default/objects/S_P_Vendors__c/fields/SnP_or_OEM__c.field-meta.xml
<CustomField>
    <fullName>SnP_or_OEM__c</fullName>
    <inlineHelpText>Indicate whether this purchase will be via S&amp;P route (A skus) or OEM (Dell/3x5 skus)</inlineHelpText>
    <label>S&amp;P or OEM?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S&amp;P</fullName>
            </value>
            <value>
                <fullName>OEM/Alliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>