force-app/main/default/objects/S_P_Vendors__c/fields/SnS_Term__c.field-meta.xml
<CustomField>
    <fullName>SnS_Term__c</fullName>
    <description>SnS Term</description>
    <inlineHelpText>Support and Subscription</inlineHelpText>
    <label>SnS Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>3 year</fullName>
            </value>
            <value>
                <fullName>Other / Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>