force-app/main/default/objects/S_P_Vendors__c/fields/SnS_Type__c.field-meta.xml
<CustomField>
    <fullName>SnS_Type__c</fullName>
    <description>SnS Type</description>
    <inlineHelpText>Support and Subscription</inlineHelpText>
    <label>SnS Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Other / Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>