force-app/main/default/objects/S_P_Vendors__c/fields/Software_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Software_Account_Executive__c</fullName>
    <label>Software Account Executive</label>
    <length>100</length>
    <type>Text</type>
</CustomField>